java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/OrigCreateMethodTest/testCreateElement8.pass
/*
 * CreateElement8.java
 *
 * Created on March 21, 2005, 10:21 PM
 *
 * To change this template, choose Tools | Options and locate the template under
 * the Source Creation and Management node. Right-click the template and choose
 * Open. You can then make changes to the template in the Source Editor.
 */

package org.netbeans.test.java.hints;

/**
 *
 */
public class CreateElement8 {
    
    /** Creates a new instance of CreateElement8 */
    public CreateElement8() {
    }
    
    public final void main(String[] args) {
        CreateElement8 e = null;
        e.test("", "", 12);
    }

    private void test(String string, String string0, int i) {
        throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
    }

}
